# can_AI_read_sodoku

./: LICENSE  README.md  getSquares.py  pyproject.toml
src/: cnn.ipynb  digitsCnn.py  errorsClass.py  getSquares.py  main.py  numbersRecognizer.py
